# cli-gpt

./: Cargo.toml  README.md
src/: main.rs  settings.rs
