[package]
name = "cli-gpt"
version = "1.0.0"
edition = "2021"
description = "ChatGPT cli version written in Rust"
authors = ["HelllWorld"]
license = "MIT"
repository = "https://github.com/"
keywords = ["ChatGPT", "OpenAI", "cli", "rust"]
categories = ["AI Assistance"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# reqwest = { version = "0.11.14", features = ["json"] }
tokio = { version = "1.34.0", features = ["full"] }
config = "0.13.3"
confy = "0.5.1"
serde = "1.0.159"
serde_derive = "1.0.159"
termimad = "0.26.1"
async-openai = "0.17.1"
futures = "0.3.29"
clap = { version = "4.4.10", features = ["derive"] }

[dev-dependencies]
tokio = { version = "1.34.0", features = ["macros", "rt-multi-thread"] }
